<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange">

    <com.ranlychan.ktv.widget.SafeAreaFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/page_bg_light_white"
            android:orientation="vertical"
            tools:context=".activity.RoomDetailActivityMain">

            <com.hjq.bar.TitleBar
                android:id="@+id/tb_room_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                app:barStyle="ripple"
                app:title="@string/page_title_room_detail_activity"
                app:titleSize="@dimen/page_title_size_middle">

            </com.hjq.bar.TitleBar>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/tv_room_type_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:ems="10"
                        android:textColor="@color/homepage_text_light_black"
                        android:textSize="@dimen/page_title_size_middle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="房型名称" />

                    <TextView
                        android:id="@+id/tv_room_short_into"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/homepage_text_light_gray"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_room_type_name"
                        tools:text="简短描述" />

                    <TextView
                        android:id="@+id/tv_sub_title_into"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/sub_title_room_detail_intro"
                        android:textColor="@color/homepage_text_light_gray"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_room_short_into" />

                    <TextView
                        android:id="@+id/tv_room_full_into"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textColor="@color/homepage_text_light_black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_sub_title_into"
                        tools:text="详细介绍" />

                    <TextView
                        android:id="@+id/tv_room_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/homepage_text_light_black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="价格" />

                    <TextView
                        android:id="@+id/tv_sub_title_room_price_time_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_title_room_detail_price_time_unit"
                        android:textColor="@color/homepage_text_light_gray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_room_price" />

                    <TextView
                        android:id="@+id/tv_sub_title_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:text="@string/sub_title_room_detail_photo"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_room_full_into" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_room_photos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_sub_title_photo"
                        tools:itemCount="1"
                        tools:listitem="@layout/room_detail_item_photo" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <android.widget.Button
                    android:id="@+id/btn_room_detail_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_14"
                    android:layout_weight="1"
                    android:background="@drawable/button_radius"
                    android:text="@string/room_detail_btn_text_reserve"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </com.ranlychan.ktv.widget.SafeAreaFrameLayout>

</FrameLayout>