<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:background="@color/page_bg_light_white"
    tools:context="fragment.HomepageFragmentMain" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/homepage_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_homepage_logo"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginEnd="10dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_homepage_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/hotel_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textSize="28sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:padding="14dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/bg_radius_white">

            <LinearLayout
                android:id="@+id/ll_homepage_window_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_homepage_window_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    tools:text="地图导航" />

                <TextView
                    android:id="@+id/tv_homepage_window_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="酒店热线" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="18dp"
                android:layout_below="@+id/ll_homepage_window_top"
                android:background="@color/homepage_text_light_gray" />

            <android.widget.Button
                android:id="@+id/btn_homepage_window_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/button_radius"
                android:text="@string/homepage_btn_text_search"
                android:textColor="@color/white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="42dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_homepage_rooms_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/homepage_rooms_title"
                android:textColor="@color/homepage_text_light_black"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_homepage_rooms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="11dp"
                    android:layout_marginRight="11dp"
                    android:layout_marginBottom="30dp"
                    tools:itemCount="4"
                    tools:listitem="@layout/homepage_item_room" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>